code cleanup: remove unused and commented out code. small updates.

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -17,7 +17,7 @@
 }
 .new-tweet div button {
   color: white;
-  background-color: #40569E;
+  background-color: grey;
   padding: 0 1rem;
   font-family: 'Bungee', cursive;
 }
