--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -33,29 +33,13 @@
   background: transparent;
 }
 
-/* .new-tweet footer {
-  display: flex;
-  justify-content: space-between;
-  font-family: "Bungee", sans-serif;
-} */
-/* .new-tweet footer button {
-  color: white;
-  background-color: #40569E;
-  padding: 0 1rem;
-} */
+.new-tweet #error {
+  display: none;
+  color: red;
+  border: 2px solid red;
+  padding: 10px 10px;
+  margin-bottom: 20px;
+  background-color: linen;
+  justify-content: flex-start;
+}
 
-/* .new-tweet {
-  display: flex;
-  flex-direction: column;
-  width: 96%;
-  padding: 20px 0;
-} */
-
-/* #tweet-text {
-  width:30%;
-  background-color: transparent;
-  outline: 0;
-  border-color: black;
-  border:none;
-  border-bottom: 2px solid; 
-} */
