--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -67,8 +67,17 @@ body {
   margin: 0 1em 0 1em;
   display: flex;
   justify-content: space-between;
-  
 }
+
+ /* Laptops / Desktops: minimum width of 1024px */
+ @media only screen and (min-width: 1024px) {
+  /* Write CSS rules that target Laptop/Desktop screen sizes and beyond */
+  body {
+    display: flex ;
+ 
+  }
+}
+
 
 
 
