--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -4,19 +4,22 @@ header {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  font-family: 'Source Sans Pro', sans-serif;
+  color: white;
   background-color: orange;
   background-color: #b34e00;
   background-image: url("https://www.transparenttextures.com/patterns/45-degree-fabric-light.png");
   /* This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */;
 }
 
+header img {
+  width: 100%;
+}
+
 /* Laptops / Desktops: minimum width of 1024px */
 @media only screen and (min-width: 1024px) {
   header {
-    /* display: flex; */
-    /* top: 120px; */
     margin: 20px;
-    /* margin-top: 140px; */
     height: 400px;
     position: fixed;
     flex-direction: column;
