--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -7,13 +7,40 @@ header {
   font-family: 'Source Sans Pro', sans-serif;
   color: white;
   background-color: orange;
-  background-color: #b34e00;
+  /* background-color: #b34e00; */
   background-image: url("https://www.transparenttextures.com/patterns/45-degree-fabric-light.png");
   /* This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */;
 }
 
 header img {
   width: 100%;
+}
+
+header #user-name h2 {
+  font-weight: normal;
+  text-align: center;
+}
+
+.arrow {
+  text-align: center;
+  margin: 8% 0;
+}
+.bounce {
+  -moz-animation: bounce 2s infinite;
+  -webkit-animation: bounce 2s infinite;
+  animation: bounce 2s infinite;
+}
+
+@keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(-5px);
+  }
+  60% {
+    transform: translateY(-2px);
+  }
 }
 
 /* Laptops / Desktops: minimum width of 1024px */
