--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -22,11 +22,22 @@ nav {
   top: 0;
 }
 
+nav i {
+  color: orange;
+}
+
+nav div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 
 
 nav p {
   font-family: 'source sans pro', cursive;
   font-size: 20px;
+  margin-bottom: 5px;
 }
 
 /* Laptops / Desktops: minimum width of 1024px */
