--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -32,12 +32,31 @@ nav div {
   align-items: center;
 }
 
-
-
 nav p {
   font-family: 'source sans pro', cursive;
   font-size: 20px;
   margin-bottom: 5px;
+}
+.arrow {
+  text-align: center;
+  margin: 8% 0;
+}
+.bounce {
+  -moz-animation: bounce 2s infinite;
+  -webkit-animation: bounce 2s infinite;
+  animation: bounce 2s infinite;
+}
+
+@keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(-5px);
+  }
+  60% {
+    transform: translateY(-2px);
+  }
 }
 
 /* Laptops / Desktops: minimum width of 1024px */
