--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -9,21 +9,22 @@ The inner content should not be touching the viewport edge on any side and shoul
 
 nav {
   font-family: 'Bungee', cursive;
-  height: 120px;
-  background-color: #4056A1;
+  height: 100px;
+  background-color: orange;
   color: #FFFFFF;
-  display: none;
+  display: flex;
   align-content: flex-start;
   align-items: center;
   justify-content: space-between;
   width: 100%;
   padding: 1.5em;
-  position: fixed;
+  position: sticky;
   top: 0;
+  background-image: url("https://www.transparenttextures.com/patterns/45-degree-fabric-light.png");
 }
 
 nav i {
-  color: orange;
+  color: red;
 }
 
 nav div {
@@ -66,5 +67,6 @@ nav p {
     position: fixed;
     display: flex;
     font-size: xx-large;
+    background-color: #4056A1;
   }
 }
