--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -63,10 +63,15 @@
   margin-bottom: 0px;
 }
 
-#counter {
+#counter {    
   font-family: "Bungee", sans-serif;
   color: darkgray;
 }
+
+#counter-error {
+  color: crimson;
+}
+
 
  /* Laptops / Desktops: minimum width of 1024px */
  @media only screen and (min-width: 1024px) {
