--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -8,18 +8,13 @@ header {
   color: white;
   text-align: center;
   background-color: orange;
-  background-image: url("https://www.transparenttextures.com/patterns/45-degree-fabric-light.png");
-  /* This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */;
+  background-image: url(https://www.transparenttextures.com/patterns/45-degree-fabric-light.png);
 }
 
 header img {
   width: 90%;
   margin-top: 4%;
 }
-
-/* header .avatar-name {
-  text-align: center;
-} */
 
 header #account-name h2 {
   font-weight: normal;
@@ -47,7 +42,6 @@ header div #account-name hr {
     padding: 20px;
     justify-content: center;
     background-color: orange;
-    /* background-image: url("https://www.transparenttextures.com/patterns/45-degree-fabric-light.png"); */
   }
 }
 
