--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -20,6 +20,7 @@ nav {
   padding: 1.5em;
   position: sticky;
   top: 0;
+  cursor: default;
   background-image: url("https://www.transparenttextures.com/patterns/45-degree-fabric-light.png");
 }
 
