--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -50,6 +50,10 @@ nav p {
   animation: bounce 2s infinite;
 }
 
+.compose-tweet {
+  cursor: pointer;
+}
+
 @keyframes bounce {
   0%, 20%, 50%, 80%, 100% {
     transform: translateY(0);
