implement error message for 0 characters in tweet
- moved display logic into seperate file to reduce complexity and dry up code

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -55,12 +55,15 @@
 .new-tweet #error {
   display: none;
   color: red;
-  border: 1px none red;
   justify-content: flex-start;
   padding: 0;
   border: 1px none;
   background-color: #f4f1ec;
   margin-bottom: 0px;
+}
+
+.new-tweet #error-msg {
+  margin-left: 10px;
 }
 
 .counter {    
